# imagediff

./: .clang-format  CMakeLists.txt  README.md
scripts/: git-png-review
src/: ImageCompareWidget.cpp  ImageCompareWidget.h  ImageDiff.cpp  ImageDiff.h  MainWindow.cpp  MainWindow.h  main.cpp
